Add API v2
Add v2 REST endpoints.

Add java client implementation for v2 REST API.

Since namespaces are treated as ordinary content objects in API v2
the old java client API for dealing with namespaces is implemented
on the client side on top of v2 "get entries" and "commit" APIs.

Run in-memory REST server tests for both v1 and v2 APIs.

REST test using persistent backend only use v2 API.

Resteasy test remain on v1 API since they construct REST requests
according to Nessie API v1 specs.

OpenAPI YAML is built and published only for v2. OpenAPI for v1
should be obtained from older Nessie publications.

This is the main contribution towards #5112
